# django-oscar-bluelight

./: .cz.toml  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.rst  client.dockerfile  docker-compose.yml  renovate.json  requirements.txt  server.dockerfile  server.sh  setup.py  test.sh  tox.ini
server/: MANIFEST.in  README.md  README.rst  bootstrap.sh  entrypoint.sh  manage.py  pyproject.toml  requirements.txt  server.sh  setup.cfg  setup.py  tox.ini
server/oscarbluelight/: basket_utils.py  defaults.py  mixins.py  tasks.py
server/oscarbluelight/dashboard/offers/: apps.py  forms.py  reports.py  serializers.py  views.py
server/oscarbluelight/dashboard/ranges/: apps.py  forms.py  models.py  views.py
server/oscarbluelight/dashboard/vouchers/: apps.py  forms.py  views.py
server/oscarbluelight/locale/es/LC_MESSAGES/: django.po
server/oscarbluelight/offer/: admin.py  applicator.py  apps.py  benefits.py  conditions.py  constants.py  groups.py  handlers.py  line_filters.py  models.py  reports.py  results.py  signals.py  sql.py  tasks.py  types.py  upsells.py  utils.py
server/oscarbluelight/offer/migrations/: 0002_compoundcondition.py  0003_merge.py  0004_conditionaloffer_groups.py  0009_auto_20200801_0817.py  0010_auto_20170613_1245.py  0010_conditionaloffer_combinations.py  0011_auto_20170710_1442.py  0011_conditionaloffer_affects_cosmetic_pricing.py  0013_conditionaloffer_exclusive.py  0014_auto_20181017_1151.py  0014_drop_triggers.py  0015_auto_20181018_1220.py  0016_remove_conditionaloffer_apply_to_displayed_prices.py  0017_auto_20190705_1245.py  0017_compoundbenefit.py  0017_range_excluded_categories.py  0018_viewrefreshlog_delete_rangeproductsetrefreshlog_and_more.py
server/oscarbluelight/static/oscarbluelight/: offergroups.css  offergroups.css.map  offergroups.js  offergroups.js.map  vendor.js  vendor.js.map  webpack-stats.json
server/oscarbluelight/tests/offer/: base.py  test_benefit_absolute.py  test_benefit_compound.py  test_benefit_fixed_price.py  test_benefit_fixed_price_per_item.py  test_benefit_form_choices.py  test_benefit_line_filter_integration.py  test_benefit_multibuy.py  test_benefit_percentage.py  test_compound_child_autocreate.py  test_condition_satisfaction_tracking.py  test_conditions.py  test_cosmetic_prices.py  test_handlers.py  test_line_filter_utils.py  test_line_filters.py  test_offer_dashboard_views.py  test_offer_groups.py  test_orphaned_compound.py  test_range.py  test_recalculate_offer_application_totals.py  test_system_groups.py
server/oscarbluelight/tests/voucher/: test_rules.py  test_vouchers.py
server/oscarbluelight/voucher/: models.py  reports.py  tasks.py
server/oscarbluelight/voucher/migrations/: 0002_auto_20160503_1138.py  0006_auto_20170710_1442.py  0008_auto_20200801_0817.py  0009_auto_20210216_1327.py  0010_auto_20210526_1410.py  0011_auto_20220615_1024.py  0012_voucher_status.py  0014_alter_voucher_name.py
server/sandbox/: __init__.py  celery.py  settings.py  urls.py
server/sandbox/_fixtures/: comms.json  order-events.json  pages.json
server/sandbox/basket/: models.py  utils.py
server/sandbox/basket/migrations/: 0001_initial.py  0002_auto_20140827_1705.py  0003_basket_vouchers.py  0004_auto_20141007_2032.py  0005_auto_20150604_1450.py  0006_auto_20160111_1108.py  0007_slugfield_noop.py  0008_auto_20190926_1547.py  0009_line_date_updated.py  0010_auto_20231012_1143.py
server/sandbox/partner/: apps.py  prices.py  strategy.py
server/sandbox/partner/migrations/: 0001_initial.py  0002_auto_20141007_2032.py  0003_auto_20150604_1450.py  0004_auto_20160107_1755.py
server/sandbox/sandbox/: celery.py  settings.py  urls.py
server/sandbox/sandbox/_catalogue/: orders.json
server/sandbox/sandbox/_fixtures/: offers.json
server/sandbox/sandbox/basket/: __init__.py  apps.py  config.py  models.py  utils.py
server/sandbox/sandbox/basket/migrations/: 0001_initial.py  0002_auto_20140827_1705.py  0003_basket_vouchers.py  0004_auto_20141007_2032.py  0005_auto_20150604_1450.py  0006_auto_20160111_1108.py  0007_slugfield_noop.py  0008_auto_20190926_1547.py  0009_line_date_updated.py  0010_auto_20231012_1143.py
server/sandbox/sandbox/partner/: __init__.py  apps.py  config.py  prices.py  strategy.py
server/sandbox/sandbox/partner/migrations/: 0001_initial.py  0002_auto_20141007_2032.py  0003_auto_20150604_1450.py  0004_auto_20160107_1755.py  0005_auto_20190926_1547.py  0006_auto_20200724_0909.py  0007_auto_20231012_1143.py
server/src/oscarbluelight/: __init__.py  basket_utils.py  caching.py  defaults.py  mixins.py  tasks.py
server/src/oscarbluelight/dashboard/offers/: __init__.py  api_views.py  app.py  apps.py  forms.py  reports.py  serializers.py  views.py
server/src/oscarbluelight/dashboard/ranges/: __init__.py  apps.py  forms.py  views.py
server/src/oscarbluelight/dashboard/vouchers/: __init__.py  app.py  apps.py  config.py  forms.py  views.py
server/src/oscarbluelight/offer/: __init__.py  admin.py  applicator.py  apps.py  benefits.py  conditions.py  config.py  groups.py  handlers.py  models.py  reports.py  results.py  signals.py  sql.py  tasks.py  upsells.py  utils.py
server/src/oscarbluelight/offer/migrations/: 0001_initial.py  0002_auto_20151210_1053.py  0002_compoundcondition.py  0003_merge.py  0004_conditionaloffer_groups.py  0005_auto_20160719_1238.py  0006_bluelightabsolutediscountbenefit_bluelightcountcondition_bluelightcoveragecondition_bluelightfixedpr.py  0007_auto_20170417_1354.py  0008_auto_20170512_1049.py  0009_auto_20170517_1605.py  0009_auto_20200801_0817.py  0010_auto_20170613_1245.py  0010_conditionaloffer_combinations.py  0011_auto_20170710_1442.py  0011_conditionaloffer_affects_cosmetic_pricing.py  0012_auto_20180514_1142.py  0012_auto_20211020_1037.py  0013_alter_offergroup_slug.py  (+16 more)
server/src/oscarbluelight/templatetags/: oscarbluelight_tags.py
server/src/oscarbluelight/voucher/: __init__.py  admin.py  apps.py  models.py  reports.py  rules.py  sql.py  tasks.py  utils.py
(+242 files in other folders)
