[build-system]
requires = ["poetry-core>=2.1.2"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "django-oscar-bluelight"
version = "5.10.0"
description = "Bluelight Specials - Enhancements to the offer and vouchers features for Django Oscar."
authors = ["thelab <thelabdev@thelab.co>"]
readme = "README.md"
homepage = "https://gitlab.com/thelabnyc/django-oscar/django-oscar-bluelight"
repository = "https://gitlab.com/thelabnyc/django-oscar/django-oscar-bluelight"
license = "ISC"

[[tool.poetry.packages]]
include = "oscarbluelight"
from = "src"

[tool.poetry.dependencies]
python = "^3.13"
Django = ">=4.2"
django-oscar = ">=4.0,<4.1"
thelabdb = ">=0.5.0"
djangorestframework = "^3.16.0"
celery = { version = ">=5.5.1", optional = true }
django-tasks = { version = ">=0.7.0", optional = true }

[tool.poetry.extras]
celery = ["celery"]
django-tasks = ["django-tasks"]

[tool.poetry.group.dev.dependencies]
coverage = "7.9.1"
django-debug-toolbar = "5.2.0"
django-redis = "5.4.0"
flake8 = "7.2.0"
hiredis = "3.2.1"
psycopg2-binary = "2.9.10"
redis = "6.2.0"
sorl-thumbnail = "12.11.0"
tox = "4.26.0"
unittest-xml-reporting = "3.2.0"
# Fix currently unpublished Python 3.12 compat
django-haystack = { git = "https://github.com/django-haystack/django-haystack.git", branch = "master" }
django-stubs = "5.2.0"
mypy = "1.15.0"
types-psycopg2 = "^2.9.21.20241019"
djangorestframework-stubs = "3.16.0"
celery-types = "0.23.0"

[tool.mypy]
python_version = "3.13"
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

# Strict mode, see mypy --help
warn_unused_configs = true
# disallow_subclassing_any = true
# disallow_any_generics = true
# disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
# disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
# warn_return_any = true
no_implicit_reexport = true
show_error_codes = true
# Not turned on by strict
strict_equality = true

[[tool.mypy.overrides]]
module = "oscar.*"
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = "debug_toolbar.*"
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = "psycopg.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "*.tests.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "sandbox.settings"

[tool.isort]
profile = "black"
from_first = true

[tool.coverage.run]
branch = true
source_pkgs = ["oscarbluelight"]

[tool.coverage.report]
show_missing = true
ignore_errors = true
