[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-oscar-bluelight"
version = "5.10.1"
description = "Bluelight Specials - Enhancements to the offer and vouchers features for Django Oscar."
readme = "README.md"
license = { text = "ISC" }
dependencies = [
    "Django (>=4.2)",
    "django-oscar (>=4.0,<4.1)",
    "thelabdb (>=0.5.0)",
    "djangorestframework (>=3.16.0,<4)",
]
requires-python = ">=3.13"

[[project.authors]]
name = "thelab"
email = "thelabdev@thelab.co"

[project.urls]
Homepage = "https://gitlab.com/thelabnyc/django-oscar/django-oscar-bluelight"
Repository = "https://gitlab.com/thelabnyc/django-oscar/django-oscar-bluelight"

[project.optional-dependencies]
celery = ["celery (>=5.5.1)"]
django-tasks = ["django-tasks (>=0.7.0)"]

[dependency-groups]
dev = [
    "coverage (==7.9.2)",
    "django-debug-toolbar (==5.2.0)",
    "django-redis (==6.0.0)",
    "ruff (>=0.11.6)",
    "hiredis (==3.2.1)",
    "psycopg2-binary (==2.9.10)",
    "redis (==6.2.0)",
    "sorl-thumbnail (==12.11.0)",
    "tox (==4.27.0)",
    "unittest-xml-reporting (==3.2.0)",
    "django-haystack @ git+https://github.com/django-haystack/django-haystack.git@master",
    "django-stubs (==5.2.1)",
    "mypy (==1.15.0)",
    "types-psycopg2 (>=2.9.21.20241019,<3)",
    "djangorestframework-stubs (==3.16.0)",
    "celery-types (==0.23.0)",
    "tox-uv>=1.26.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["oscarbluelight"]

[tool.mypy]
python_version = "3.13"
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

# Strict mode, see mypy --help
warn_unused_configs = true
# disallow_subclassing_any = true
# disallow_any_generics = true
# disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
# disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
# warn_return_any = true
no_implicit_reexport = true
show_error_codes = true
# Not turned on by strict
strict_equality = true

[[tool.mypy.overrides]]
module = "oscar.*"
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = "debug_toolbar.*"
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = "psycopg.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "*.tests.*"
ignore_errors = true


[tool.isort]
profile = "black"
from_first = true

[tool.ruff.lint.isort]
from-first = true

[tool.django-stubs]
django_settings_module = "sandbox.settings"


[tool.coverage.run]
branch = true
source_pkgs = ["oscarbluelight"]

[tool.coverage.report]
show_missing = true
ignore_errors = true
