[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-oscar-bluelight"
version = "5.12.0"
description = "Bluelight Specials - Enhancements to the offer and vouchers features for Django Oscar."
readme = "README.md"
license = { text = "ISC" }
dependencies = [
    "Django (>=5.2)",
    "django-oscar (>=4.0,<4.2)",
    "thelabdb (>=0.6.1)",
    "djangorestframework (>=3.16.1,<4)",
]
requires-python = ">=3.13"

[[project.authors]]
name = "thelab"
email = "thelabdev@thelab.co"

[project.urls]
Homepage = "https://gitlab.com/thelabnyc/django-oscar/django-oscar-bluelight"
Repository = "https://gitlab.com/thelabnyc/django-oscar/django-oscar-bluelight"

[project.optional-dependencies]
celery = ["celery (>=5.6.2)"]
django-tasks = ["django-tasks (>=0.11.0,<0.11.1)"]

[dependency-groups]
dev = [
    "coverage (==7.13.2)",
    "django-debug-toolbar (==6.2.0)",
    "django-redis (==6.0.0)",
    "ruff (>=0.14.14)",
    "hiredis (==3.3.0)",
    "psycopg2-binary (==2.9.11)",
    "redis (==7.1.0)",
    "sorl-thumbnail (==12.11.0)",
    "tox (==4.34.1)",
    "unittest-xml-reporting (==3.2.0)",
    "django-haystack @ git+https://github.com/django-haystack/django-haystack.git@master",
    "django-stubs (==5.2.9)",
    "mypy (==1.19.1)",
    "types-psycopg2 (>=2.9.21.20251012,<3)",
    "djangorestframework-stubs (==3.16.7)",
    "celery-types (==0.24.0)",
    "tox-uv>=1.29.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["oscarbluelight"]

[[tool.uv.index]]
name = "thelabnyc"
url = "https://gitlab.com/api/v4/groups/269576/-/packages/pypi/simple"
explicit = true

[tool.mypy]
python_version = "3.13"
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

# Strict mode, see mypy --help
warn_unused_configs = true
# disallow_subclassing_any = true
# disallow_any_generics = true
# disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
# disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
# warn_return_any = true
no_implicit_reexport = true
show_error_codes = true
# Not turned on by strict
strict_equality = true

[[tool.mypy.overrides]]
module = "oscar.*"
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = "debug_toolbar.*"
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = "psycopg.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "*.tests.*"
ignore_errors = true


[tool.isort]
profile = "black"
from_first = true

[tool.ruff.lint.isort]
from-first = true

[tool.django-stubs]
django_settings_module = "sandbox.settings"


[tool.coverage.run]
branch = true
source_pkgs = ["oscarbluelight"]

[tool.coverage.report]
show_missing = true
ignore_errors = true
